--- a/componentes/formularioDeContacto/formularioDeContacto.html
+++ b/componentes/formularioDeContacto/formularioDeContacto.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="../..config/config.css">
 </head>
 <body>
+
+    <h1>HOLA</h1>
     
     <script src="formularioDeContacto.js"></script>
 </body>
