--- a/componentes/formularioDeComentariosReseñas/formularioDeComentariosResañas.html
+++ b/componentes/formularioDeComentariosReseñas/formularioDeComentariosResañas.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="../..config/config.css">
 </head>
 <body>
+
+    <h1>Pinito</h1>
     <script src="formularioDeComentariosResañas.js"></script>
 </body>
 </html>
