--- a/componentes/formularioDeComentariosReseñas/formularioDeComentariosResañas.html
+++ b/componentes/formularioDeComentariosReseñas/formularioDeComentariosResañas.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <h1>Pinito</h1>
+    <h1>alegria</h1>
     <script src="formularioDeComentariosResañas.js"></script>
 </body>
 </html>
