--- a/componentes/formularioDeRegistro/formularioDeRegistro.html
+++ b/componentes/formularioDeRegistro/formularioDeRegistro.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="../..config/config.css">
 </head>
 <body>
+
+    <h1>Jacobo</h1>
     
     <script src="formularioDeRegistro.js"></script>
 </body>
