--- a/componentes/formularioDePedidoCompras/formularioDePedidaCompras.html
+++ b/componentes/formularioDePedidoCompras/formularioDePedidaCompras.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="../..config/config.css">
 </head>
 <body>
+
+    <h1>Ojitos</h1>
     
     <script src="formularioDePedidaCompras.js"></script>
 </body>
