--- a/Login/Login.html
+++ b/Login/Login.html
@@ -12,7 +12,7 @@
 
     <section class="box-login">
     <div class="formulario">
-        <div class="log">🌺Housy</div>
+        <div class="log">🍓fresa🍓</div>
         <h2>Welcome back, please login <br> to your acout</h2>
         <div class="btn-facebook"><img src="https://static.vecteezy.com/system/resources/previews/018/930/698/non_2x/facebook-logo-facebook-icon-transparent-free-png.png" alt=""> Login with facebook</div>
         <div class="btn-xing"><img src="https://img.freepik.com/vector-gratis/nuevo-diseno-icono-x-logotipo-twitter-2023_1017-45418.jpg?size=338&ext=jpg" alt=""> Login with xing</div>
@@ -48,7 +48,7 @@
 
     </div>
     <div class="banner">
-        <img src="https://img.freepik.com/fotos-premium/flores-azules-nombre-azul-lado_1257205-65.jpg?w=360" alt="">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRN4HJhnJo07reTM0Lta1HoTollHloqsqRUVw&s" alt="">
     </div>
 </section>
 
