Diseño Formulario de Busqueda hecho por Génesis

--- a/componentes/formularioDeBusqueda/formularioDeBusqueda.html
+++ b/componentes/formularioDeBusqueda/formularioDeBusqueda.html
@@ -10,7 +10,50 @@
 </head>
 <body>
 
-    <h1>Fresa</h1>
+   <section class="Padre">
+    <div class="ojo hola1">
+        <br>
+        <form action="" id="inntt">
+            <label action="" class="it" >
+                    <h1>NOMBRE</h1>
+                    <input type="NOMBRE">
+            </label>
+        </form>
+        <br>
+        <br>
+        <form action="" id="iho">
+            <label action="" class="at" >
+                    <h1>Correo Electronico</h1>
+                    <input type="Correo Electronico">
+            </label>
+        </form>
+        <br>
+        <br>
+        <form action="" id="iha">
+            <label action="" class="et" >
+                    <h1>Trabajo</h1>
+                    <input type="Trabajo">
+            </label>
+        </form>
+        <br>
+        <br>
+        <form action="" id="iho">
+            <label action="" class="ot" >
+                    <h1>ID</h1>
+                    <input type="ID">
+            </label>
+        </form>
+    </div>
+    <div class="ojo hola2">
+        <img src="https://i.pinimg.com/564x/73/f4/d7/73f4d7fcf31c8ac8c4be5c0b080ed916.jpg" alt="">
+    </div>
+    <div class="ojo hola3">
+        <button class="mi-boton">RESET</button>
+    </div>
+    <div class="ojo hola4">
+        <button class="mi-botonn">RESET</button>
+    </div>
+   </section>
 
     <script src="formularioDeBusqueda.js"></script>
     
